CICO-41809 fixes center alignment per stjepan and sudeep's input

--- a/zest_station/css/themes/chalet-view/theme.less
+++ b/zest_station/css/themes/chalet-view/theme.less
@@ -76,10 +76,6 @@
 		#main {
 			#calc > #height > .remove(100%, 145px);
 			top: 145px;
-			padding-top: 50px;
-			#content {
-				height: 100% !important;
-			}
 		}
 
 		#actions {
